# tensorflow-lite

./: .gitignore  Cargo.toml  README.md
src/: coreml.rs  gpu.rs  lib.rs  metal.rs
