[package]
name = "tensorflow-lite"
version = "0.1.0"
authors = ["Lay Liuyi <songww@weilaicheng.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow-lite-sys = { git = "https://github.com/songww/tensorflow-lite-sys", branch = "main" }
num-complex = "0.3"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
