[package]
name = "tensorflow-lite"
version = "0.1.0"
authors = ["Lay Liuyi <songww@weilaicheng.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow-lite-sys = { git = "https://github.com/songww/tensorflow-lite-sys", branch = "main" }
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
num-complex = { version = "0.3", optional = true }
f128 = { version = "0.2", optional = true }
half = { version = "1.7", optional = true }

[features]
default = [ "v2.4", "xnnpack" ]
"v2.4" = [ "tensorflow-lite-sys/v2.4" ]
gpu = [ "tensorflow-lite-sys/gpu" ]
metal = [ "tensorflow-lite-sys/metal" ]
coreml = [ "tensorflow-lite-sys/coreml" ]
xnnpack = [ "tensorflow-lite-sys/xnnpack" ]
experimental = [ "tensorflow-lite-sys/experimental" ]
complex = [ "num-complex" ]
